Added sorting functionality

--- a/src/main/resources/templates/create-post.html
+++ b/src/main/resources/templates/create-post.html
@@ -11,7 +11,7 @@
         <input type="text" th:field="*{title}" placeholder="Title"><br><br>
         <input type="text" th:field="*{excerpt}" placeholder="Excerpt"><br><br>
         <input type="text" th:field="*{author}" placeholder="Author"><br><br>
-        <!--<input type="text" name="tagList" th:field="*{tags}" placeholder="Tags"> <br> <br>-->
+        <input type="text" name="tagList"  placeholder="Tags (comma separated)"> <br> <br>
         <textarea rows="15" th:field="*{content}"></textarea> <br><br>
         <input type="submit" value="Publish">
     </form>
