--- a/src/main/resources/templates/edit-post.html
+++ b/src/main/resources/templates/edit-post.html
@@ -16,6 +16,16 @@
             <label for="content">Content</label>
             <textarea id="content" th:field="*{content}" rows="5" required></textarea>
         </div>
+        <input type="text" th:field="*{tags}"  placeholder="Tags (comma separated)"> <br>
+        <!--<div class="form-group">
+
+            &lt;!&ndash; Loop through all tags and create checkboxes &ndash;&gt;
+            <div th:each="tag : ${allTags}">
+                <input type="checkbox" th:field="*{tags}" th:value="${tag.id}"
+                       th:checked="${post.tags.contains(tag)}" />
+                <label th:for="${tag.id}" th:text="${tag.name}">Tag Name</label><br>
+            </div>
+        </div>-->
         <button type="submit">Update Post</button>
     </form>
 </body>
