Added searching functionality

--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -89,6 +89,12 @@
         <button type="submit">Sort</button>
     </form>
 
+    <form action="/search" method="get">
+        <input type="text" name="query" placeholder="Search by title, content, author, or tags" required>
+        <button type="submit">Search</button>
+    </form>
+
+
 
 
     <h1>All Posts</h1>
