--- a/src/main/resources/templates/edit-post.html
+++ b/src/main/resources/templates/edit-post.html
@@ -16,7 +16,7 @@
             <label for="content">Content</label>
             <textarea id="content" th:field="*{content}" rows="5" required></textarea>
         </div>
-        <input type="text" th:field="*{tags}"  placeholder="Tags (comma separated)"> <br>
+        <input type="text" th:value="${tags}" name="tagsList"  placeholder="Tags (comma separated)"> <br>
         <!--<div class="form-group">
 
             &lt;!&ndash; Loop through all tags and create checkboxes &ndash;&gt;
