--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -195,50 +195,31 @@
         <p th:text="${post.author}" class="post-content"></p>
         <p th:text="${post.tags}" class="post-content"></p>
     </div>
-   <!-- <div class="pagination-container">
-        <ul class="pagination">
-            <li th:each="page : ${#numbers.sequence(1, totalPages)}"
-                th:with="start=${(page - 1) * 10 + 1}">
-                <a th:href="@{/posts(start=${start}, limit=10)}">[[${page}]]</a>
-            </li>
-        </ul>
-    </div>-->
-  <!--  <div>
-        <ul>
-            <li th:each="i : ${#numbers.sequence(1, totalPages)}">
-                <a th:href="@{'/posts?start=' + ${i} + '&limit=' + ${limit}}">Page [[i]]</a>
-            </li>
-        </ul>
-    </div>-->
 
-    <!-- Pagination controls -->
     <div class="pagination">
-        <form th:action="@{/posts}" method="GET" th:if="${pageNumber > 0}">
-            <input type="hidden" name="startDate" th:value="${startDate}">
-            <input type="hidden" name="endDate" th:value="${endDate}">
-            <input type="hidden" name="sort" th:value="${sort}">
-            <input type="hidden" th:each="tag : ${selectedTags}" th:name="selectedTags" th:value="${tag}"/>
-            <input type="hidden" name="keyword" th:value="${keyword}">
-            <input type="hidden" th:each="author : ${selectedAuthors}" th:name="selectedAuthors" th:value="${author}"/>
-            <input type="hidden" name="pageNumber" th:value="${pageNumber == null or pageNumber == 0 ? 0 : pageNumber - 1}"/>
-            <button type="submit">Previous</button>
-        </form>
-        <form th:action="@{/posts}" method="GET" th:if="${hasNextPage}">
-            <input type="hidden" name="startDate" th:value="${startDate}">
-            <input type="hidden" name="endDate" th:value="${endDate}">
-            <input type="hidden" name="sort" th:value="${sort}">
-            <input type="hidden" th:each="tag : ${selectedTags}" th:name="selectedTags" th:value="${tag}"/>
-            <input type="hidden" name="keyword" th:value="${keyword}">
-            <input type="hidden" th:each="author : ${selectedAuthors}" th:name="selectedAuthors" th:value="${author}"/>
-            <input type="hidden" name="pageNumber" th:value="${pageNumber == null ? 1 : pageNumber + 1}"/>
-            <button type="submit">Next</button>
-        </form>
+        <div class="pagination-controls">
+            <form action="/posts/filter" method="get" th:if="${currentPage > 0}">
+                <input type="hidden" name="page" th:value="${currentPage - 1}"/>
+                <input type="hidden" name="size" value="10"/>
+                <input type="hidden" name="sort" th:value="${sortOrder}"/>
+                <input type="hidden" name="selectedAuthor" th:value="${selectedAuthor}"/>
+                <input type="hidden" name="startDate" th:value="${startDate}"/>
+                <input type="hidden" name="endDate" th:value="${endDate}"/>
+                <input type="hidden" th:each="tag : ${selectedTags}" name="selectedTags" th:value="${tag}"/>
+                <button type="submit"><span th:text="${currentPage != null && currentPage > 0 ? 'Previous' : '0'}"></span></button>
+            </form>
+            <form action="/posts/filter" method="get" th:if="${currentPage < totalPages - 1}">
+                <input type="hidden" name="page" th:value="${currentPage + 1}"/>
+                <input type="hidden" name="size" value="10"/>
+                <input type="hidden" name="sort" th:value="${sortOrder}"/>
+                <input type="hidden" name="selectedAuthor" th:value="${selectedAuthor}"/>
+                <input type="hidden" name="startDate" th:value="${startDate}"/>
+                <input type="hidden" name="endDate" th:value="${endDate}"/>
+                <input type="hidden" th:each="tag : ${selectedTags}" name="selectedTags" th:value="${tag}"/>
+                <button type="submit">Next</button>
+            </form>
+        </div>
     </div>
-
-
-
-
-
 
 </body>
 </html>
