--- a/src/main/resources/templates/post-details.html
+++ b/src/main/resources/templates/post-details.html
@@ -3,14 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${post.title}">Post Details</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        form {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 5px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-size: 1.1em;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #fff;
+            background-color: #222;
+            color: #fff;
+            border-radius: 3px;
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        input[type="text"]:focus,
+        textarea:focus {
+            outline: none;
+            border-color: #fff;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: #000;
+            border: 1px solid #fff;
+            cursor: pointer;
+            border-radius: 3px;
+        }
+
+        button:hover {
+            background-color: #444;
+        }
+
+        input::placeholder {
+            color: #ccc;
+        }
+    </style>
 </head>
 <body>
     <div>
-        <h2 th:text="${post.title}"></h2>
-        <p th:text="${post.content}"></p>
-        <p th:text="${post.publishedAt}"></p>
-        <p th:text="${post.excerpt}"></p>
-        <p th:text="${post.author}"></p>
+        <label>Title : </label>  <h2 th:text="${post.title}"></h2>  <br>
+
+        <label>Content : </label> <p th:text="${post.content}"></p> <br>
+
+        <label>Published At : </label>  <p th:text="${post.publishedAt}"></p> <br>
+
+        <label>Excerpt : </label>
+        <p th:text="${post.excerpt}"></p> <br>
+        <label>Author : </label>
+        <p th:text="${post.author}"></p> <br>
         <div class="post-actions">
             <a th:href="@{'/posts/edit/' + ${post.id}}">Edit Post</a>
             <a th:href="@{'/posts/delete/' + ${post.id}}" onclick="return confirm('Are you sure you want to delete this post?');">Delete Post</a>
@@ -41,12 +117,12 @@
             <p th:text="${comment.name}">Comment Name</p>
             <p th:text="${comment.comment}">Comment Content</p>
            <a th:href="@{/comments/edit/{id}(id=${comment.id})}">Edit Comment</a>
-            <form  method="post"
+           <!-- <form  method="post"
                    th:action="@{'/comments/updateComment/'+ ${post.id} + '/' + ${comment.id}}"
                    th:object="${comment}">
                 <input type="hidden" name="id" th:value="${comment.id}"/>
                 <button type="submit" class="co">Update</button>
-            </form>
+            </form>-->
             <form method="post"
                   th:action="@{/comments/delete/{id}(id=${comment.id})}"  th:object="${comment}">
                 <input type="hidden" name="id" th:value="${comment.id}"/>
