--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,12 @@
 <body>
     <h1>Login Form</h1>
     <form th:action="@{/authenticateTheUser}"  method="POST">
+        <div th:if="${param.error}">
+            <i>Sorry! You entered invalid username/password.</i>
+        </div>
+        <div th:if="${param.logout}">
+            <i>You have been logged out.</i>
+        </div>
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
@@ -15,7 +21,6 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
-
         <div class="form-group">
             <button type="submit">Login</button>
         </div>
